<resources>
    <string name="app_name">LnkShortener</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <string name="setup_summary">Run the first-time setup in order to signup with 1n.pm or add your custom server data.</string>
    <string name="settings_domain">Set Domain</string>
    <string name="settings_api_key">Set API Key</string>
    <string name="server_settings">Server Settings</string>
    <string name="run_setup">Run Setup</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_short_link">ShortLinkActivity</string>


</resources>
