<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <Preference android:title="@string/run_setup"
        android:summary="@string/setup_summary">
        <intent android:action="de.hirtenstrasse.michael.lnkshortener.SetupActivity" />
    </Preference>
    <PreferenceCategory
        android:title="@string/server_settings">
        <EditTextPreference
            android:defaultValue="https://1n.pm"
            android:key="url"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/settings_domain" />
        <EditTextPreference
            android:defaultValue=""
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/settings_api_key"
            android:key="api_key" />

    </PreferenceCategory>
</PreferenceScreen>
